...
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:onClick="openLink"
        android:id="@+id/link_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_globe" />

    <ImageView

        android:onClick="back"
        android:padding="3dp"
        android:id="@+id/back_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/link_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/link_img"
...
