<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="articleVm"
            type="com.example.articlesapp.viewModels.ArticlesViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ArticleListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/articles_rcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mabrouk.loaderlib.LoaderView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:loaderType="FoldingCube"
        app:loaderColor="@color/purple_500"
        app:showLoader="@{articleVm.loader}"
        app:showError="@{articleVm.errorMsg!=null}"
        app:enableRetry="@{articleVm.errorMsg!=null}"
        app:callBack="@{articleVm.callBack}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
